--- a/page/css/agree.css
+++ b/page/css/agree.css
@@ -31,23 +31,20 @@ html {
 body {
     width: 600px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
     margin: 0;
-}
-
-.max-div {
-    width: 100%;
-    height: 100%;
 }
 
 /* 헤더 */
 .header{
+    width: 100%;
+}
+
+.header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 1.5vw;
+    padding: 2rem 0 1rem 0;
 }
 
 .cover-navbar-menu {
@@ -95,6 +92,7 @@ body {
 /* 메인 */
 .main {
     width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -107,7 +105,7 @@ body {
 }
 
 .back-btn-div{
-    padding: 1.5vw;
+    padding-top: 1.5vw;
     align-self: flex-start;
 }
 
@@ -120,29 +118,33 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
+    margin-top: 2vw;
+    margin-bottom: 4vw;
 }
+
 .welcome-div p {
     margin-top: 1vw;
+    font-weight: bold;
+}
+
+.welcome-div img{
+    margin-left: 1rem;
 }
 
 .start-div {
     width: 100%;
     text-align: left;
-    padding-left: 3vw;
-}
-
-.border-line {
-    width: 90%;
-    border-top: solid 1px black;
-    border-bottom: solid 1px rgb(201, 200, 200);
-    padding-top: 1.5vw;
-    padding-bottom: 1.5vw;
+    padding-left: 1vw;
+    box-sizing: border-box;
+    font-weight: bold;
 }
 
 .cover-agree-div {
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin-bottom: 3vw;
 } 
 
@@ -150,8 +152,21 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 1vw;
+    margin: 1rem;
     width: 100%;
+}
+
+.border-line {
+    border-top: solid 1px black;
+    border-bottom: solid 1px rgb(201, 200, 200);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.agree-left {
+    width: 100%;
+    display: flex;
+    justify-content: left;
     padding-left: .5vw;
     padding-right: .5vw;
 }
@@ -161,33 +176,96 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-left: .5vw;
+    padding-right: .5vw;
 }
 
 .agree-div span {
     margin-left: .5vw;
 }
 
-.agree-left {
-    width: 100%;
-    display: flex;
-    justify-content: left;
-}
-
 .agree-space {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .center-div {
     display: flex;
     justify-content: center;
-    width: 100%;
+    width: 80%;
 }
 
 .next-btn {
     border-radius: 10px;
-    width: 33vw;
-    height: 5vw;
+    width: 100%;
+    height: 4rem;
     background-color: #FFD651;
     font-size: 1.5rem;
+    margin-bottom: 3rem;
+}
+
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+@media screen and (max-width: 600px) {
+    .header-div {
+        padding: 2rem 1rem;
+    }
+
+    .navbar-searchBtn {
+        padding-right: .4rem;
+    }
+    
+    .navbar-toggleBtn {
+        padding-left: 0.4rem;
+        color: black;
+    }
+    
+    .back-btn-div{
+        align-self: flex-start;
+        padding: 1rem .6rem;
+    }
+
+    .start-div { 
+        width: 90%;
+    }
+
+    .start-div p {
+        font-size: 1rem;
+    }
+
+    .welcome-div {
+        margin-top: 0;
+        margin-bottom: 3rem;
+    }
+
+    .welcome-div p {
+        font-size: 1rem;
+        margin-top: .5rem;
+    }
+
+    .cover-agree-div {
+        margin-bottom: 2.5rem;
+    }
+
+    .agree-div {
+        width: 90%;
+        margin: 0.5rem;
+    }
+
+    .border-line {
+        width: 90%;
+        padding-top: 1.3rem;
+        padding-bottom: 1.3rem;
+    }
+
+    .agree-div span {
+        font-size: 0.8rem;
+        margin-left: 0.5rem;
+    }
+
+    .next-btn {
+        font-size: 1.2rem;
+    }
 }
