--- a/page/css/join-success.css
+++ b/page/css/join-success.css
@@ -20,7 +20,12 @@ input {
 /* p태그 기본마진 제거*/
 p {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+/* placeholder 기본색상 검정*/
+input::placeholder {
+    color: #A1A1A1;
 }
 
 html {
@@ -31,23 +36,20 @@ html {
 body {
     width: 600px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
     margin: 0;
-}
-
-.max-div {
-    width: 100%;
-    height: 100%;
 }
 
 /* 헤더 */
 .header{
+    width: 100%;
+}
+
+.header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 1.5vw;
+    padding: 2rem 0 1rem 0;
 }
 
 .cover-navbar-menu {
@@ -83,6 +85,29 @@ body {
     color: rgb(90, 90, 90);
 }
 
+.defalut-li {
+    width: 6vw;
+    height: 2vw;
+    background-color: #f8cb37;
+    border-radius: 10px;
+    margin: 0.3vw;
+    padding: 0.5vw;
+    font-size: 0.7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center ;
+    text-align: center;
+}
+
+.navbar-toggleBtn {
+    padding: .75vw;
+    color: black;
+}
+
+.navbar-toggleBtn:hover {
+    color: rgb(90, 90, 90);
+}
+
 /* 메인 */
 .main {
     display: flex;
@@ -91,16 +116,128 @@ body {
     align-items: center;
 }
 
-.default-div {
-    margin-top: 2vw;
-    margin-bottom: 2vw;
-}
-
 .back-btn-div{
-    padding: 2vw;
+    padding-top: 1.5vw;
     align-self: flex-start;
+    width: 100%;
+    margin-bottom: 15rem;
 }
 
 .back-btn:hover svg path {
     stroke: rgb(90, 90, 90);
+}
+
+.join-complete {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5rem;
+}
+
+.join-complete-img {
+   width: 7rem;
+   margin: 1rem;
+}
+
+.join-complete-msg1 {
+    font-size: 2rem;
+    margin: 2rem;
+}
+
+.join-complete-msg2 {
+    color: #9A9A9A;
+}
+
+.default-div {
+    margin: 1rem 0 3rem 0;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
+}
+
+.select-btn {
+    background-color: #FFD651;
+    border-radius: 10px;
+    width: 50%;
+    height: 4rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-hover:hover {
+    background-color: #f8cb37;
+}
+
+.home-btn {
+    margin-right: .5rem;
+}
+
+.login-btn {
+    margin-left: .5rem;
+}
+
+
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+@media screen and (max-width: 600px) {
+    p {
+        font-size: 1rem;
+    }
+
+    .header-div {
+        padding: 2rem 1rem;
+    }
+
+    .navbar-searchBtn {
+        padding-right: .4rem;
+    }
+    
+    .navbar-toggleBtn {
+        padding-left: 0.4rem;
+        color: black;
+    }
+
+    /* 메인 */
+    .back-btn-div{
+        align-self: flex-start;
+        padding: 1rem .6rem 0;
+        margin-bottom: 10rem;
+    }
+
+    .join-complete-img {
+        width: 5rem;
+    }
+
+    .join-complete-msg1 {
+        font-size: 1.4rem;
+        margin: 2rem 0 1.2rem 0;
+    }
+
+    .join-complete-msg2 {
+        font-size: 0.8rem;
+    }
+
+    .default-div {
+        margin-top: 0;
+        margin-bottom: 1rem;
+        width: 80%;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .select-div {
+        margin-bottom: 2rem;
+    }
+
+    .select-btn {
+        width: 40vw;
+        height: 12vw;
+    }
 }
