--- a/page/css/join.css
+++ b/page/css/join.css
@@ -20,7 +20,17 @@ input {
 /* p태그 기본마진 제거*/
 p {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+}
+
+/* placeholder 기본색상 검정*/
+input::placeholder {
+    color: #A1A1A1;
+}
+
+/* 자주쓰는 */
+.bold {
+    font-weight: bold;
 }
 
 html {
@@ -31,23 +41,20 @@ html {
 body {
     width: 600px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
     margin: 0;
-}
-
-.max-div {
-    width: 100%;
-    height: 100%;
 }
 
 /* 헤더 */
 .header{
+    width: 100%;
+}
+
+.header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 1.5vw;
+    padding: 2rem 0 1rem 0;
 }
 
 .cover-navbar-menu {
@@ -83,6 +90,15 @@ body {
     color: rgb(90, 90, 90);
 }
 
+.navbar-toggleBtn {
+    padding: .75vw;
+    color: black;
+}
+
+.navbar-toggleBtn:hover {
+    color: rgb(90, 90, 90);
+}
+
 /* 메인 */
 .main {
     display: flex;
@@ -91,16 +107,97 @@ body {
     align-items: center;
 }
 
-.default-div {
-    margin-top: 2vw;
-    margin-bottom: 2vw;
-}
-
 .back-btn-div{
-    padding: 2vw;
+    margin-top: 1.5vw;
+    margin-bottom: 5rem;
     align-self: flex-start;
 }
 
 .back-btn:hover svg path {
     stroke: rgb(90, 90, 90);
+}
+
+.default-div{
+    width: 80%;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    margin-bottom: 3rem;
+}
+
+.cover-text-guide {
+    width: 80%;
+    margin-bottom: .5rem;
+}
+
+.text-guide {
+    align-self: flex-start;
+    width: 100%;
+    font-weight: 500;
+}
+
+.input-default {
+    font-size: 1.2rem;
+    padding-left: 1.5rem;
+    width: 100%;
+}
+
+.auth-div {
+    margin-top: 3rem;
+}
+
+.auth-btn {
+    background-color: #FFD651;
+    border-radius: 10px;
+    width: 100%;
+    height: 4rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn-hover:hover {
+    background-color: #f8cb37;
+}
+
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+/* 미디어 쿼리 */
+@media screen and (max-width: 600px) {
+    p {
+        font-size: 1rem;
+    }
+
+    .header-div {
+        padding: 2rem 1rem;
+    }
+
+    .navbar-searchBtn {
+        padding-right: .4rem;
+    }
+    
+    .navbar-toggleBtn {
+        padding-left: 0.4rem;
+        color: black;
+    }
+
+    /* 메인 */
+    .back-btn-div{
+        align-self: flex-start;
+        padding: 1rem .6rem 0;
+        margin-bottom: 3rem;
+    }
+
+    .default-div {
+        height: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    .auth-btn {
+        height: 3rem;
+    }
 }
