--- a/page/css/login.css
+++ b/page/css/login.css
@@ -20,12 +20,12 @@ input {
 /* p태그 기본마진 제거*/
 p {
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
 }
 
 /* placeholder 기본색상 검정*/
 input::placeholder {
-    color: black;
+    color: #A1A1A1;
 }
 
 /* 자주쓰는 */
@@ -41,26 +41,20 @@ html {
 body {
     width: 600px;
     height: 100vh;
-    display: flex;
-    justify-content: center;
     margin: 0;
-}
-
-.max-div {
-    width: 100%;
-    height: 100%;
 }
 
 /* 헤더 */
 .header{
+    width: 100%;
+}
+
+.header-div {
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin: 0;
-    padding: 1.5vw;
-}
-.navbar-logo {
-
+    padding: 2rem 0 1rem 0;
 }
 
 .cover-navbar-menu {
@@ -148,12 +142,16 @@ body {
 }
 
 .default-div {
-    margin-top: 2vw;
-    margin-bottom: 2vw;
+    margin: 1rem 0;
+    width: 80%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
 }
 
 .back-btn-div{
-    padding: 1.5vw;
+    padding-top: 1.5vw;
     align-self: flex-start;
 }
 
@@ -161,36 +159,54 @@ body {
     stroke: rgb(90, 90, 90);
 }
 
+.select-div {
+    margin-bottom: 3rem;
+}
+
 .select-btn {
     background-color: #f0f0f0;
     border-radius: 10px;
-    width: 18vw;
-    height: 5vw;
+    width: 50%;
+    height: 4rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
 }
 
+.general-btn {
+    margin-right: .5rem;
+}
+
+.counselor-btn {
+    margin-left: .5rem;
+}
+
 .id-div,.password-div {
     background-color: #f0f0f0;
     border-radius: 10px;
-    width: 36vw;
-    height: 5vw;
+    height: 4rem;
     box-sizing: border-box;
     display: flex;
     align-items: center;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 }
 
-.text-default {
+.login-div {
+    margin-top: 3rem;
+}
+
+.input-default {
     font-size: 1.2rem;
-    padding-left: 2vw;
+    padding-left: 1.5rem;
+    width: 100%;
 }
 
 .login-btn {
     background-color: #FFD651;
     border-radius: 10px;
-    width: 36vw;
-    height: 5vw;
+    width: 100%;
+    height: 4rem;
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -203,6 +219,11 @@ body {
 .sns-bar {
     display: flex;
     align-items: center;
+    margin: 0;
+}
+
+.line-img {
+    padding: 0 0.5rem;
 }
 
 .btn-hover:hover {
@@ -220,6 +241,7 @@ body {
 
 .naver-btn{
     color: #f8cb37;
+    box-sizing: border-box;
 }
 
 .naver-btn:hover svg rect{
@@ -229,157 +251,61 @@ body {
 /* 미디어 쿼리 */
 /* 미디어 쿼리 */
 /* 미디어 쿼리 */
-@media screen and (max-width: 1023px) {
-
-    body {
-        width: 100vw;
-        height: 100vh;
-        margin: 0;
-    }
-
-    .max-div {
-        width: 100%;
-        height: 100%;
-    }
-
+@media screen and (max-width: 600px) {
     p {
-        margin: 0;
         font-size: 1rem;
     }
 
-    /* 헤더 */
-    .header{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        margin: 0;
-        padding: 3vw;
-    }
-    .navbar-logo {
-
-    }
-
-    .cover-navbar-menu {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        max-height: 0;
-        opacity: 0;
-        overflow: hidden;
-        transition: max-height .7s ease, opacity .5s ease;
-    }
-    
-    .cover-navbar-menu.active {
-        display: flex;
-        max-height: 500px; 
-        opacity: 1;
-    }
-    
-    .navbar-menu {
-        display: flex;
-        padding: 0;
-    }
-
-    .navbar-right {
-        display: flex;
+    .header-div {
+        padding: 2rem 1rem;
     }
 
     .navbar-searchBtn {
-        padding: 1vw;
+        padding-right: .4rem;
     }
-
-    .navbar-searchBtn:hover {
-        color: rgb(90, 90, 90);
-    }
-
-    .defalut-li {
-        width: 16vw;
-        height: 12vw;
-        background-color: #f8cb37;
-        border-radius: 10px;
-        margin: 1vw;    
-        padding: 0.5vw;
-        font-size: 0.8rem;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-    }
-
-    .emergency-counseling {
-
-    }
-
-    .non-face-counseling {
-
-    }
-
-    .daily-self {
-
-    }
-
-    .daily-diary {
-
-    }
-
-    .manual {
-        
-    }
-
+    
     .navbar-toggleBtn {
-        padding: 1vw;
+        padding-left: 0.4rem;
         color: black;
     }
 
-    .navbar-toggleBtn:hover {
-        color: rgb(90, 90, 90);
-    }
-
     /* 메인 */
-    .main {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    .back-btn-div{
+        align-self: flex-start;
+        padding: 1rem .6rem 0;
     }
 
     .default-div {
-        margin-top: 4vw;
-        margin-bottom: 4vw;
-    }
-
-    .back-btn-div{
-        padding: 1.5vw;
-        align-self: flex-start;
-    }
-
-    .back-btn:hover svg path {
-        stroke: rgb(90, 90, 90);
-    }
-
-    .select-btn {
-        background-color: #f0f0f0;
-        border-radius: 10px;
-        width: 40vw;
-        height: 12vw;
-        display: inline-flex;
+        margin-top: 0;
+        margin-bottom: 1rem;
+        width: 80%;
+        height: 3rem;
+        display: flex;
         align-items: center;
         justify-content: center;
     }
-
-    .id-div,.password-div {
-        background-color: #f0f0f0;
-        border-radius: 10px;
-        width: 80vw;
-        height: 12vw;
-        box-sizing: border-box;
-        display: flex;
-        align-items: center;
+    
+    .select-div {
+        margin-bottom: 2rem;
     }
 
-    .text-default {
+    .id-div, .password-div {
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .login-div {
+        margin-top: 2rem;
+    }
+
+    .select-btn {
+        width: 40vw;
+        height: 12vw;
+    }
+
+    .input-default {
         font-size: 1rem;
-        padding-left: 5vw;
+        padding-left: 1.5rem;
     }
 
     .login-btn {
@@ -390,35 +316,5 @@ body {
         display: inline-flex;
         align-items: center;
         justify-content: center;
-    }
-
-    .text-hover {
-        font-size: .6rem;
-    }
-
-    .sns-bar {
-        display: flex;
-        align-items: center;
-    }
-
-    .btn-hover:hover {
-        background-color: #f8cb37;
-    }
-
-    .sns-bar-text {
-        margin: .8rem;
-        font-size: 0.6rem;
-    }
-
-    .text-hover:hover {
-        color: rgb(105, 104, 104);
-    }
-
-    .naver-btn{
-        color: #f8cb37;
-    }
-
-    .naver-btn:hover svg rect{
-        filter: brightness(0.9);
-    }
+    } 
 }
