--- a/page/css/join.css
+++ b/page/css/join.css
@@ -108,8 +108,6 @@ body {
 }
 
 .back-btn-div{
-    margin-top: 1.5vw;
-    margin-bottom: 5rem;
     align-self: flex-start;
 }
 
@@ -127,6 +125,42 @@ body {
     background-color: #f0f0f0;
     border-radius: 10px;
     margin-bottom: 3rem;
+}
+
+.cover-select-div {
+    width: 80%;
+    margin-bottom: 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.select-div {
+    margin: 1rem 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 4rem;
+}
+
+.select-btn {
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    width: 50%;
+    height: 4rem;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.general-btn {
+    margin-right: .5rem;
+}
+
+.counselor-btn {
+    margin-left: .5rem;
 }
 
 .cover-text-guide {
@@ -147,7 +181,7 @@ body {
 }
 
 .auth-div {
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 .auth-btn {
@@ -189,7 +223,6 @@ body {
     .back-btn-div{
         align-self: flex-start;
         padding: 1rem .6rem 0;
-        margin-bottom: 3rem;
     }
 
     .default-div {
@@ -199,5 +232,24 @@ body {
 
     .auth-btn {
         height: 3rem;
+    }
+
+    .cover-select-div {
+        margin-bottom: 1rem;
+    }
+
+    .select-div {
+        margin-top: 0;
+        margin-bottom: 1rem;
+        width: 100%;
+        height: 3rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .select-btn {
+        width: 40vw;
+        height: 12vw;
     }
 }
